# Reticulum-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
crates/reticulum/: Cargo.toml
crates/reticulum-daemon/: Cargo.toml
crates/reticulum-daemon/src/: announce_names.rs  config.rs  direct_delivery.rs  identity_store.rs  inbound_delivery.rs  lib.rs  lxmf_bridge.rs  receipt_bridge.rs  rns_crypto.rs
crates/reticulum-daemon/tests/: announce_names.rs  config.rs  direct_link_delivery.rs  direct_link_inbound.rs  identity_store.rs  lxmf_bridge_tests.rs  receipt_bridge.rs  receipt_worker.rs  rns_crypto.rs
docs/: compatibility-contract.md  release-runbook.md
docs/adr/: 0001-enterprise-reliability-split.md
docs/architecture/: overview.md
docs/plans/: 2026-01-26-reticulum-rs-migration.md  2026-01-27-clippy-cleanup.md  2026-01-27-daemon-lxmf-transport-interop-design.md  2026-01-27-direct-link-mode.md  2026-01-27-reticulum-e2e-announce-implementation.md  2026-01-27-reticulum-e2e-harness-design.md  2026-01-27-reticulum-e2e-harness-implementation.md  2026-01-27-reticulum-e2e-messaging-announces-design.md  2026-01-27-reticulum-e2e-messaging-announces-implementation.md  (+1 more)
src/: destination.rs  e2e_harness.rs  hash.rs  identity.rs  iface.rs  lib.rs  packet.rs  resource.rs  transport.rs  utils.rs
tests/: announce_scheduler.rs  cli_parity.rs  crypto_parity.rs  destination_parity.rs  e2e_harness_helpers.rs  identity_parity.rs  link_event_layout.rs  lxmf_announce_handlers.rs  lxmf_packet_limits.rs  lxmf_packet_modes.rs  lxmf_proof_receipts.rs  lxmf_receipt_callbacks.rs  lxmf_receipt_proof.rs  lxmf_resources.rs  packet_parity.rs  rpc_announces.rs  rpc_events.rs  rpc_framing.rs  rpc_http.rs  rpc_messages_parity.rs  rpc_methods.rs  storage_messages.rs
(+82 files in other folders)
