[workspace]
resolver = "2"
members = [
  "crates/reticulum",
  "crates/reticulum-daemon",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/FreeTAKTeam/Reticulum-rs"

[patch.crates-io]
reticulum-rs = { path = "crates/reticulum" }

[patch."https://github.com/FreeTAKTeam/Reticulum-rs.git"]
reticulum-rs = { path = "crates/reticulum" }
