[package]
name = "reticulum-daemon"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
reticulum = { package = "reticulum-rs", path = "../reticulum" }
lxmf = { git = "https://github.com/FreeTAKTeam/LXMF-rs.git", rev = "7dbea035c73be8e2a92a053ac3b75631301a67b7" }
clap = { version = "4.5.29", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1" }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
rmpv = "1.3.1"
rmp-serde = "1.3.1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "reticulumd"
path = "src/bin/reticulumd.rs"
